# logveil

./: .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  demo.py  logveil_legacy.py  main.py  pyproject.toml  requirements.txt  sample_log.txt  sanilog.py  setup.ps1  setup.sh  test_core.py
bridge/go-wrapper/: main.go
cli/: args.py  dispatcher.py  logveil-agent.py
core/: __init__.py  entropy.py  legacy_compat.py  profile_loader.py  profiles.py  redactor.py  sanitizer.py  sanitizer_engine.rs  statistics.py
examples/: README.md  sample_log.txt
logveil/: __init__.py
logveil/cli/: __init__.py  args.py  dispatcher.py  logveil_agent.py
logveil/core/: Cargo.toml  __init__.py  redactor.py  sanitizer.py  sanitizer_engine.rs  structured.py  trace_log.py
logveil/legacy/: __init__.py
logveil/logveil_types/types/: __init__.py
logveil/serve/: __init__.py
logveil/utils/: __init__.py  error_handling.py  file_io.py  logging.py
profiles/: application.json  cloudtrail.json  docker.json  nginx.json
schemas/: output_schema.json  redaction_policy.yaml
serve/: api.py
tests/: __init__.py  test_entropy_detection.py  test_logveil_agent.py  test_sanitizer.py
tools/: html_diff_viewer.py
tools/testbench/: benchmark.py
types/: models.py
utils/: error_handling.py  file_io.py
